--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ header h1 {
   background: linear-gradient(180deg, #1A2A44, #2E7D32);
   color: #F9F1E7;
   padding-top: 120px;
+    overflow: scroll;
   transition: left 0.6s cubic-bezier(0.77, 0, 0.175, 1);
   z-index: 10;
   box-shadow: 6px 0 20px rgba(0, 0, 0, 0.3);
